--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
 </head>
 <body>
 
-  <h1>Hello World</h1>
+  <div>
+    <h1>CrystalsCollector!</h1>
+  </div>
+
+<div id="wrapper">
+  <div id="randNum">0</div>
+  <div>
+    <div id="wins"></div>
+    <div id="losses"></div>
+  </div>
+  <div>
+    <div>
+      <img src="assets/images/image1.jpg" width="100px;" class="crystal" id="crystal-1" value="1">
+    </div>
+    <div>
+      <img src="assets/images/image2.jpg" width="100px;" class="crystal" id="crystal-2" value="2">
+    </div>
+    <div>
+      <img src="assets/images/image3.jpg" width="100px;" class="crystal" id="crystal-3" value="3">
+    </div>
+    <div>
+      <img src="assets/images/image 4.jpg" width="100px;" class="crystal" id="crystal-4" value="4">
+    </div>
+  </div>
+  <div>
+    <p>Your total score is:</p>
+  </div>
+  <div>
+    <p id="countDisplay">0</p>
+  </div>
+</div>
 
  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
  <script src="assets/javascript/game.js"></script>
