add FUNC for intialzing game, generating values for crystals, and generating for random crystal value

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div id="wrapper">
   <div id="randNum">0</div>
   <div>
-    <div id="wins"></div>
-    <div id="losses"></div>
+    <div id="wins" value="0">0</div>
+    <div id="losses" value= "0">0</div>
   </div>
   <div>
     <div>
