--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
   </div>
   <div>
     <div>
-      <img src="assets/images/image1.jpg" width="100px;" class="crystal" id="crystal-1" value="1">
+      <img src="assets/images/image1.jpg" width="100px;" class="crystal" id="crystal-1">
     </div>
     <div>
-      <img src="assets/images/image2.jpg" width="100px;" class="crystal" id="crystal-2" value="2">
+      <img src="assets/images/image2.jpg" width="100px;" class="crystal" id="crystal-2">
     </div>
     <div>
-      <img src="assets/images/image3.jpg" width="100px;" class="crystal" id="crystal-3" value="3">
+      <img src="assets/images/image3.jpg" width="100px;" class="crystal" id="crystal-3">
     </div>
     <div>
-      <img src="assets/images/image 4.jpg" width="100px;" class="crystal" id="crystal-4" value="4">
+      <img src="assets/images/image 4.jpg" width="100px;" class="crystal" id="crystal-4">
     </div>
   </div>
   <div>
