udpate display logic

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </div>
 
 <div id="wrapper">
-  <div id="randNum">0</div>
+  <div id="randNumber"></div>
   <div>
-    <div id="wins" value="0">0</div>
-    <div id="losses" value= "0">0</div>
+    <div id="wins">0</div>
+    <div id="losses">0</div>
   </div>
   <div>
     <div>
