--- a/index.html
+++ b/index.html
@@ -7,17 +7,36 @@
 </head>
 <body>
 
-  <div>
+<div id="container">
+  <div id="header">
     <h1>CrystalsCollector!</h1>
   </div>
 
-<div id="wrapper">
-  <div id="randNumber"></div>
-  <div>
-    <div id="wins">0</div>
-    <div id="losses">0</div>
+<div id="wrapper clearfix">
+  <div id="instructionsWrap">
+    <p> You will be given a random number at the start of the game.</p>
+    <br>
+    <p> There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+    <br>
+    <p> You win the game by mathcing your total score to random number, you lose the game if your total score goes above the random number.</p>
+    <br>
+    <p> The value of each crystal in hidden from you and you click on it.</p>
+    <br>
+    <p> Each time when the game starts, the game will change the vales of each crystal.</p>
+    <br>
   </div>
-  <div>
+  <div id="score">
+    <div id="randNumber"></div>
+    <div id="counterRender">
+      <div >
+        <p> Your wins: </p><span id="wins"></span>
+      </div>
+      <div >
+        <p> Your losses: </p><span id="losses"></span>
+      </div>
+    </div>
+    </div>
+  <div id="images">
     <div>
       <img src="assets/images/image1.jpg" width="100px;" class="crystal" id="crystal-1">
     </div>
@@ -31,12 +50,16 @@
       <img src="assets/images/image 4.jpg" width="100px;" class="crystal" id="crystal-4">
     </div>
   </div>
-  <div>
-    <p>Your total score is:</p>
+  <div id="userScore">
+    <div>
+      <p>Your total score is:</p>
+    </div>
+    <br>
+    <div>
+      <p id="countDisplay">0</p>
   </div>
-  <div>
-    <p id="countDisplay">0</p>
   </div>
+</div>
 </div>
 
  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
