added background image

--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
     </div>
   </div>
   <div id="userScore">
-    <div>
-      <p>Your total score is:</p>
+    <div class="scoreSpacing-1">
+      <p>Your total score is:</p><br>
     </div>
-    <br>
-    <div>
+    <div class="scoreSpacing-2">
       <p id="countDisplay">0</p>
-  </div>
+    </div>
   </div>
 </div>
 </div>
