adjust css to have white text in the users score box

--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@
       <img src="assets/images/image 4.jpg" width="100px;" class="crystal" id="crystal-4">
     </div>
   </div>
-  <div id="userScore">
+  <div class="userScore">
     <div class="scoreSpacing-1">
-      <p>Your total score is:</p><br>
+      <p>Your total score is:</p>
     </div>
-    <div class="scoreSpacing-2">
-      <p id="countDisplay">0</p>
     </div>
-  </div>
+      <div class="userScore" id="largeScore">
+      <div class="scoreSpacing-2">
+       <p id="countDisplay">0</p>
+      </div>
+    </div>
 </div>
 </div>
 
